# c-calc

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  c-calc.c  config.h  config.status  configure  configure.ac  main  main.c
.deps/: c-calc.Po  main.Po
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
